- genr: make '^' (exponentiation) associate rightwards
- genr: support the syntax "func(args)[slice]" to select
  directly a submatrix from a function call that returns a
  matrix
- panel, random effects estimator, Hausman test: notify the 
  user if the matrix-difference version of the Hausman test 
  fails; also document the --hausman-reg option in the help 
  entry for the "panel" command
- VARs: support gaps in the lag structure
- New GUI graph option: "Plot curve" under the tools menu,
  for quick plotting of a formula
- Chow test: add the option of specifying a dummy variable
  rather than a break point
- Boxplots: enable boxplot command in loops
- "var" command: allow single-equations VARs
- seq() function: add a third, optional step parameter
- Speed up loading of very large data files in gretl
  native format
- Fixes for handling of data files with over 999 variables
- Minor improvement to parsing of dates in CSV files

1/23/2008 version 1.8.0
- Fix bug: crash in "Add random variable" dialog
- Translation fixes
- Add new command: "modprint"
- Remove obsolete commands: "rhodiff" and "hccm"
- Speed-ups for the pdf() function as applied to a
  series argument
- New option --numeric for the nls and mle commands,
  to force the use of numerical derivatives
- Numerous small graphing and GUI fixes
- MS Windows: fix for opening graphs in old session files
- Graphs: "display PDF" option: fix possible encoding issue
- GUI graph controller: new facility to add a line, defined
  via a formula, to an existing graph
- GUI graph controller: add facility to choose point style
- Gnuplot line-color selector: extend to 6 colors, and
  distinguish between setting the "palette" and setting
  ad hoc colors for a specific graph
- Scalars: make these accessible via the icon view window;
  enable copying to clipboard as CSV; enable entry of a 
  formula (starting with "=") in scalar-editing window
- Fix encoding issue when copying to clipboard as plain
  text or RTF